log
Fri 09 Sep 2022 05:03:54 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
70b7550
Fri 09 Sep 2022 05:04:07 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
664269d
Fri 09 Sep 2022 05:04:15 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
e193f8b
Fri 09 Sep 2022 05:13:57 PM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:23: error: statement with no effect [-Werror=unused-value]
   48 |       map->buckets[i] == newPair;
      |       ~~~~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9317a6
Fri 09 Sep 2022 05:14:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ce065dc
Fri 09 Sep 2022 05:25:54 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  8|3
total_score: 40/70
c06a51c
Fri 09 Sep 2022 05:35:52 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 50/70
777ab26
Sat 10 Sep 2022 09:41:56 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:114:5: error: expected expression before ‘}’ token
  114 |     }
      |     ^
Compilation failed
8b6fc2d
Sat 10 Sep 2022 09:43:58 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
890cf4f
Sun 11 Sep 2022 05:49:36 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  13|2
total_score: 50/70
76ea54a
Sun 11 Sep 2022 05:51:19 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  16|1
total_score: 60/70
d56281e
Sun 11 Sep 2022 05:57:58 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:19: error: expected ‘;’ before ‘map’
   65 |   map->capacity*=2
      |                   ^
      |                   ;
   66 | 
   67 | map->buckets = (Pair**)malloc(map->capacity,sizeof(Pair*));
      | ~~~                
hashmap.c:72:54: error: ‘value’ undeclared (first use in this function)
   72 |       insertMap(map,auxbuckets[i]->key,auxbuckets[i]-value);
      |                                                      ^~~~~
hashmap.c:72:54: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
94777cc
Sun 11 Sep 2022 05:58:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:67:24: error: too many arguments to function ‘malloc’
   67 | map->buckets = (Pair**)malloc(map->capacity,sizeof(Pair*));
      |                        ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:539:14: note: declared here
  539 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
In file included from test.c:4:
hashmap.c:72:54: error: ‘value’ undeclared (first use in this function)
   72 |       insertMap(map,auxbuckets[i]->key,auxbuckets[i]-value);
      |                                                      ^~~~~
hashmap.c:72:54: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
59c5753
Sun 11 Sep 2022 06:01:36 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:66:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   66 |     map->buckets=(Pair*)calloc(map->capacity,sizeof(Pair));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
28785ca
Sun 11 Sep 2022 06:02:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
d3ce5c1
Sun 11 Sep 2022 06:03:17 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  17|0
total_score: 70/70
144138c
Sun 11 Sep 2022 06:03:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
98739b4
Sun 11 Sep 2022 06:03:58 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  17|0
total_score: 70/70
5eab80f
